--- a/Road to Recovery/pages/editPatientStatusModal.html
+++ b/Road to Recovery/pages/editPatientStatusModal.html
@@ -25,7 +25,8 @@
                     <option disabled selected>דקות</option>
                 </select>
                 &nbsp;:
-                <select id="editPatientStatusModalHours">PatientStatus
+                <select id="editPatientStatusModalHours">
+                    PatientStatus
                     <option disabled selected>שעות</option>
                 </select>
                 <br />  <br />
@@ -34,9 +35,10 @@
                 <input type="checkbox" id="editPatientStatusNotFinishedCB" onchange="checkeditTimeNotFinishedCB(this.checked)" />
             </div>
             <div class="text-right modal-footer">
-                <button type="button" onclick="updateRidePatPatientStatus()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
+                <button type="button" onclick="updateUnityridePatientStatus()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
                 <button type="button" class="btn btn-secondary" onclick="editPatientStatusAbort()" data-dismiss="modal">ביטול</button>
             </div>
         </div>
     </div>
 </div>
+<!--//updateRidePatPatientStatus()-->
