--- a/Road to Recovery/pages/editRemarkModal.html
+++ b/Road to Recovery/pages/editRemarkModal.html
@@ -4,7 +4,6 @@
         height: 20vh;
         resize: vertical;
     }
-    
 </style>
 
 
@@ -23,9 +22,10 @@
                 </textarea>
             </div>
             <div class="text-right modal-footer">
-                <button type="button" onclick="updateRemark()" id="" class="btn btn-secondary">אישור</button>
+                <button type="button" onclick="updateRemark_UnityRide()" id="" class="btn btn-secondary">אישור</button>
                 <button type="button" class="btn btn-secondary" onclick="editRemarkAbort()" data-dismiss="modal">ביטול</button>
             </div>
         </div>
     </div>
 </div>
+<!--//updateRemark()-->
