--- a/Road to Recovery/pages/VolunteerDetails.html
+++ b/Road to Recovery/pages/VolunteerDetails.html
@@ -242,8 +242,8 @@
         }
 
         function goToIgul() {
-            window.location.href = 'https://bit.ly/2RB4Pzk';
-        }
+            //window.location.href = 'https://bit.ly/2RB4Pzk';
+            window.location.href = `https://www.igul.org.il/amutot/%D7%91%D7%93%D7%A8%D7%9A-%D7%9C%D7%94%D7%97%D7%9C%D7%9E%D7%94/`;        }
     </script>
 </head>
 <body class="fixed-left">
