--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -83,7 +83,7 @@
             CustomObj.Pat.Equipment = thisRide.PatientEquipments == null ? [] : thisRide.PatientEquipments ;
             CustomObj.Pat.IsAnonymous = thisRide.IsAnonymous;
             CustomObj.Pat.RidePatPatientStatus = {};
-            CustomObj.Pat.RidePatPatientStatus.Status = thisRide.PatientStatus == "" ? -1 : 1;
+            CustomObj.Pat.RidePatPatientStatus.Status = (thisRide.PatientStatus == "" || thisRide.PatientStatus == "Not Finished") ? -1 : 1;
             CustomObj.Pat.RidePatPatientStatus.EditTimeStamp = thisRide.PatientStatusEditTime
 
             CustomObj.Pat.EscortedList = [];
@@ -1366,7 +1366,7 @@
             return driversPromise;
         }
 
-
+        //continue here..
 
         const assignDriverToRidePat = () => {
             $('#wait').show();
@@ -1503,48 +1503,48 @@
             const minutes = $("#editPatientStatusModalMinutes").val();
             const isTreatmentFinished = !$("#editPatientStatusNotFinishedCB").is(':checked');
 
-            //if (
-            //    isNaN(hours) || isNaN(minutes) ||
-            //    hours === null || minutes === null
-            //) {
-            //    $('#wait').hide();
-            //    return alert('נא לבחור שעה מהרשימות הנגללות או לבטל את הפעולה');
-            //}
+            if (
+                isNaN(hours) || isNaN(minutes) ||
+                hours === null || minutes === null
+            ) {
+                $('#wait').hide();
+                return alert('נא לבחור שעה מהרשימות הנגללות או לבטל את הפעולה');
+            }
 
             let ridepatToManipulate = arr_rides.find(r => r.RidePatNum === _ridepatToManipulate);
             const now = new Date();
-            console.log('check it --', ridepatToManipulate, isTreatmentFinished)
             const editTimeStamp = new Date(now.getFullYear(), now.getMonth(), now.getDate(), hours, minutes);
-            //to continue here !!!!!!!!!! ------- !!!!!!!!
 
-            //ridepatToManipulate = CustomRideObject(ridepatToManipulate);
-            //ridepatToManipulate.Pat.RidePatPatientStatus.Status = isTreatmentFinished;
-            //ridepatToManipulate.Pat.RidePatPatientStatus.EditTimeStamp = editTimeStamp;
+            ridepatToManipulate = CustomRideObject(ridepatToManipulate);
+            ridepatToManipulate.Pat.RidePatPatientStatus.Status = isTreatmentFinished;
+            ridepatToManipulate.Pat.RidePatPatientStatus.EditTimeStamp = editTimeStamp;
+
             //update_arr_rides(ridepatToManipulate);
+            
+            const data = {
+                patientId: ridepatToManipulate.Pat.Id,
+                unityRideID: ridepatToManipulate.RidePatNum,
+                patientStatus: isTreatmentFinished ? "Finished" : "Not Finished",
+                editTimeStamp: editTimeStamp
+            }
+            console.log('check it --', data)
 
-            //const data = {
-            //    patientId: ridepatToManipulate.Pat.Id,
-            //    ridePatId: ridepatToManipulate.RidePatNum,
-            //    patientStatus: isTreatmentFinished ? "Finished" : "Not Finished",
-            //    editTimeStamp: editTimeStamp
-            //}
+            const updatePatientStatus_SCB = () => {
 
-            //const updatePatientStatus_SCB = () => {
+                $('#wait').hide();
+                $('#editPatientStatusModal').modal('hide');
+            }
 
-            //    $('#wait').hide();
-            //    $('#editPatientStatusModal').modal('hide');
-            //}
+            const updatePatientStatus_ECB = (err) => {
 
-            //const updatePatientStatus_ECB = (err) => {
-
-            //    $('#wait').hide();
-            //    $('#editPatientStatusModal').modal('hide');
-            //    console.log(err);
-            //    alert(err);
-            //}
+                $('#wait').hide();
+                $('#editPatientStatusModal').modal('hide');
+                console.log(err);
+                alert(err);
+            }
 
             //console.log('Gilad check the data send -->', data);
-            //ajaxCall('UpdatePatientStatus', JSON.stringify(data), updatePatientStatus_SCB, updatePatientStatus_ECB);
+            ajaxCall('UpdatePatientStatus_UnityRide', JSON.stringify(data), updatePatientStatus_SCB, updatePatientStatus_ECB);
         }
 
 
